vehicle/tests/golden/error/argument/missingVerifier/spec.vcl
@network
f : Vector Rat 1 -> Vector Rat 1

@property
trivial : Bool
trivial = f [0] ! 0 > 0
